--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="wanted-pre-onboarding-frontend" />
     <title>wanted-pre-onboarding-frontend</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Noto+Sans+KR:wght@300&family=Poppins:wght@300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
